fixed the off-centre issue

--- a/hackathon-project/src/App.css
+++ b/hackathon-project/src/App.css
@@ -1,5 +1,8 @@
+* {
+  outline: 1px solid red;
+}
 #root {
-  max-width: 1280px;
+  max-width: 100%;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
